2004-04-16  Carl Worth  <cworth@isi.edu>

	* NEWS: Add notes for snapshot 0.1.1

	* configure.in: Increment LIBPIXMAN_VERSION to 0.1.1

	* src/ictrap.c (IcCreateAlphaPicture): 
	* src/icrect.c (pixman_color_rects): 
	* src/pixregion.c (pixman_region16_print, pixman_region16_valid): 
	* src/icint.h (IcBitsMask):
	* src/icimage.h:
	* src/icimage.c (pixman_image_change):
	* src/icformat.c (pixman_format_create): 
	* src/pixman.h: Fix bogus names such as PIXMAN_FORMAT_NAME_AR_GB32
	that were left over from a broken search-and-replace. Normalize
	structure defintions, (eg. struct _pixman_region16_t -> struct
	pixman_region16). Normalize indentation.

	* AUTHORS: Fix alphabetization.

2004-02-24  Carl Worth  <cworth@isi.edu>

	* AUTHORS: Added attribution for several authors after sifting
	through the ChangeLog.
	Fix email address for Anders Carlsson.

2004-01-24  Carl Worth  <cworth@isi.edu>

	* src/iccompose.c (IcFetch_transform): 
	(IcFetcha_transform): Remove dead-code (useless n++).

2004-01-22  Richard Worth <richard@theworths.org>

	* src/Makefile.am: Add '-no-undefined' to end of
	libpixman_la_LDFLAGS tp enable building shared libary under
	cygwin.

	* src/pixman.h: Remove all 'extern ' and ' __external_linkage'
	(macro for __declspec(dllexport) and __declspec(dllimport))
	from function declarations. These are no longer needed for cygwin.
	
2003-12-17  Carl Worth  <cworth@east.isi.edu>

	* src/pixman.h: Remove trailing commas from enum, (some compilers
	like to complain about this).

2003-12-12  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* src/Makefile.am: Remove LIBPIXMAN_CFLAGS/LIBS cruft.
	(libpixman_la_SOURCES): slim_export.h slim_import.h gone.

2003-12-12  Carl Worth  <cworth@east.isi.edu>

	* src/pixman.h: Fold contents of slim_export/import.h directly
	into this file to avoid dependence on external slim package.

	* src/icint.h:
	* src/pixregionint.h: Use quote-based include now that
	slim_internal is an internal file.
	