@@ -5,6 +5,7 @@ Jakub Bogusz <qboosh@pld-linux.org> Fixes for 64-bit machines.
 Anders Carlsson <andersca@gnome.org> Build fixes. New accessor functions.
 Richard Henderson <rth@twiddle.net> "slim" macros for better shared libraries 
 Keith Packard <keithp@keithp.com> The original implementation of the compositing code.
+Vladimir Vukicevic <vladimir@pobox.com> Bug fix.
 Bryan Worth <bryan@theworths.org> Cleanups to not depend on X header files.
 Carl Worth <carl@theworths.org> General maintenance. Original port from X server code.
 Richard Worth <richard@theworths.org> Build fixes for cygwin.
