@@ -1,3 +1,9 @@
+2004-05-06  Carl Worth  <cworth@isi.edu>
+
+	* src/icimage.c (pixman_image_set_clip_region): Leave
+	clientClipType as CT_NONE if region is NULL (thanks to Vladimir
+	Vukicevic <vladimir@pobox.com>).
+
 2004-04-16  Carl Worth  <cworth@isi.edu>
 
 	* NEWS: Add notes for snapshot 0.1.1
